Closed
Bug 1269343
Opened 10 years ago
Closed 9 years ago
update harfbuzz to upstream release 1.3.0
Categories
(Core :: Layout: Text and Fonts, defect)
Core
Layout: Text and Fonts
Tracking
()
RESOLVED
FIXED
mozilla51
| Tracking | Status | |
|---|---|---|
| firefox51 | --- | fixed |
People
(Reporter: shanshandehongxing, Assigned: jfkthame)
References
Details
Attachments
(1 file)
|
378.42 KB,
patch
|
jrmuizel
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:46.0) Gecko/20100101 Firefox/46.0
Build ID: 20160421124000
Steps to reproduce:
https://cgit.freedesktop.org/harfbuzz/commit/?id=a5b7b0dd4508d8a1e7573b75c4cb8832c9e34e3f
Overview of changes leading to 1.2.7
Monday, May 2, 2016
====================================
- Blacklist another version of Times New Roman (Bold) Italic from Windows 7.
- Fix Mongolian Free Variation Selectors shaping with certain fonts.
- Fix Tibetan shorthand contractions shaping.
- Improved list of language tag mappings.
- Unbreak build on Windows CE.
- Make 'glyf' table loading lazy in hb-ot-font.
| Reporter | ||
Updated•10 years ago
|
URL: https://en.wikipedia.org/wiki/Manchu_...
| Reporter | ||
Updated•10 years ago
|
URL: https://en.wikipedia.org/wiki/Manchu_...
| Reporter | ||
Comment 1•10 years ago
|
||
This version has big improvements for Mongolian, Manchu and Tibetan. If you want to know what will happened after this update, you can see browse following pages:
https://en.wikipedia.org/wiki/Manchu_alphabet, using Oyun fonts by Inner Mongolian University: http://oyun.mglip.com/mongolfont/index.aspx
http://www.babelstone.co.uk/Tibetan/Contractions.html, using recent version of Microsoft Himalaya
| Reporter | ||
Comment 2•10 years ago
|
||
(In reply to Krasnaya Ploshchad from comment #1)
> This version has big improvements for Mongolian, Manchu and Tibetan. If you
> want to know what will happened after this update, you can see browse
> following pages:
>
> https://en.wikipedia.org/wiki/Manchu_alphabet, using Oyun fonts by Inner
> Mongolian University: http://oyun.mglip.com/mongolfont/index.aspx
> http://www.babelstone.co.uk/Tibetan/Contractions.html, using recent version
> of Microsoft Himalaya
Several texts in these pages looks different between IE/Edge and current version of Firefox
| Reporter | ||
Comment 3•10 years ago
|
||
In bug 1128658 HarfBuzz have found a bug that affects Devanagari text layout with Arial Unicode MS, maybe waiting for HarfBuzz 1.2.8 or higher would be better.
| Reporter | ||
Comment 4•9 years ago
|
||
HarfBuzz 1.3.0 released
https://cgit.freedesktop.org/harfbuzz/commit/?id=a732e00ea4fffebaa85a89420f09df4c11d650e0
Overview of changes leading to 1.3.0
Thursday, July 21, 2016
====================================
- Update to Unicode 9.0.0
- Move Javanese from Indic shaper to Universal Shaping Engine.
- Allow MultipleSubst to delete a glyph (matching Windows engine).
- Update Universal Shaping Engine to latest draft from Microsoft.
- DirectWrite backend improvements. Note: this backend is for testing ONLY.
- CoreText backend improvements with unreachable fonts.
- Implement symbol fonts (cmap 3.0.0) in hb-ft and hb-ot-font.
- Blacklist bad GDEF of more fonts (Tahoma & others).
- Misc fixes.
| Reporter | ||
Updated•9 years ago
|
Summary: update harfbuzz to upstream release 1.2.7 → update harfbuzz to upstream release 1.3.0
Updated•9 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Reporter | ||
Comment 5•9 years ago
|
||
| Assignee | ||
Comment 6•9 years ago
|
||
Routine update to pick up latest improvements (see issues mentioned above). I've pulled the latest trunk code from upstream, rather than the actual 1.3.0 release, as there are a few additional post-1.3.0 fixes that seem worth taking at the same time.
Attachment #8783356 -
Flags: review?(jmuizelaar)
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Updated•9 years ago
|
Attachment #8783356 -
Flags: review?(jmuizelaar) → review+
| Assignee | ||
Comment 7•9 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/ad40e1942ad2c5b0f0723ef4bf6114b506dd721d
Bug 1269343 - Update harfbuzz to release 1.3.0 + additional recent fixes from upstream. r=jrmuizel
Comment 8•9 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
status-firefox51:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
You need to log in
before you can comment on or make changes to this bug.
Description
•