Bug 1269343 - Update harfbuzz to release 1.3.0 + additional recent fixes from upstream. r=jrmuizel